Updating package json

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "npm run db-init & nodemon ./bin/www",
-    "test": "npm run db-init & nodemon --exec './node_modules/.bin/mocha --reporter spec --timeout 300 test/*.test.js || true'",
-    "grade": "npm run db-init & mocha --reporter spec --timeout 300 test/*.js",
+    "start": "npm run db-init && nodemon ./bin/www",
+    "test": "npm run db-init && nodemon --exec './node_modules/.bin/mocha --reporter spec --timeout 300 test/*.test.js || true'",
+    "grade": "npm run db-init && mocha --reporter spec --timeout 300 test/*.js",
     "db-init": "psql -f db-init.sql"
   },
   "dependencies": {
