--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "test": "nodemon --exec './node_modules/.bin/mocha --reporter spec --timeout 300 test/*.test.js || true'",
+    "test": "nodemon --exec 'mocha --reporter spec --timeout 300 test/*.test.js || true'",
     "grade": "mocha --reporter spec --timeout 300 test/*.js",
     "db-init": "psql -f db-init.sql",
     "postinstall": "npm run db-init"
