change numeric ip to localhost

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "database": "checkpoint_express_sequelize",
-  "host": "127.0.0.1",
+  "host": "localhost",
   "dialect": "postgres",
   "logging": false
 }
