--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,5 @@
 {
-  "database": "checkpoint_express_sequelize",
+  "database": "pokemon",
   "host": "localhost",
   "dialect": "postgres",
   "logging": false
