--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "async": "^1.4.2",
+    "bluebird": "^3.4.6",
     "body-parser": "^1.14.1",
     "chalk": "^1.1.1",
+    "chance": "^1.0.4",
     "debug": "^2.2.0",
     "express": "^4.13.3",
     "morgan": "^1.6.1",
